tests/static/sa-clang.txt
In file included from src/minuitdriver.cpp:35:
src/minuitdriver.h:124:57: error: expected expression
  std::map<std::string, minimizer0_t, functional::iless<>> minimizer0Map;
                                                        ^
src/minuitdriver.h:124:73: error: type name requires a specifier or qualifier
  std::map<std::string, minimizer0_t, functional::iless<>> minimizer0Map;
                                                                        ^
src/minuitdriver.h:124:73: error: C++ requires a type specifier for all declarations
  std::map<std::string, minimizer0_t, functional::iless<>> minimizer0Map;
                                                                        ^
src/minuitdriver.h:124:73: error: declaration does not declare anything
  std::map<std::string, minimizer0_t, functional::iless<>> minimizer0Map;
                                                                        ^
src/minuitdriver.h:125:57: error: expected expression
  std::map<std::string, minimizer1_t, functional::iless<>> minimizer1Map;
                                                        ^
src/minuitdriver.h:125:73: error: type name requires a specifier or qualifier
  std::map<std::string, minimizer1_t, functional::iless<>> minimizer1Map;
                                                                        ^
src/minuitdriver.h:125:73: error: C++ requires a type specifier for all declarations
  std::map<std::string, minimizer1_t, functional::iless<>> minimizer1Map;
                                                                        ^
src/minuitdriver.h:125:73: error: declaration does not declare anything
  std::map<std::string, minimizer1_t, functional::iless<>> minimizer1Map;
                                                                        ^
src/minuitdriver.h:126:57: error: expected expression
  std::map<std::string, minimizer2_t, functional::iless<>> minimizer2Map;
                                                        ^
src/minuitdriver.h:126:73: error: type name requires a specifier or qualifier
  std::map<std::string, minimizer2_t, functional::iless<>> minimizer2Map;
                                                                        ^
src/minuitdriver.h:126:73: error: C++ requires a type specifier for all declarations
  std::map<std::string, minimizer2_t, functional::iless<>> minimizer2Map;
                                                                        ^
src/minuitdriver.h:126:73: error: declaration does not declare anything
  std::map<std::string, minimizer2_t, functional::iless<>> minimizer2Map;
                                                                        ^
src/minuitdriver.h:42:5: error: use of undeclared identifier 'minimizer0Map'; did you mean 'minimizer0_t'?
    minimizer0Map["MinuitMigrad"]   = &MinuitDriver::runMigrad;
    ^
src/minuitdriver.h:43:5: error: use of undeclared identifier 'minimizer1Map'; did you mean 'minimizer1_t'?
    minimizer1Map["MinuitMigrad"]   = &MinuitDriver::runMigrad;
    ^
src/minuitdriver.h:44:5: error: use of undeclared identifier 'minimizer2Map'; did you mean 'minimizer2_t'?
    minimizer2Map["MinuitMigrad"]   = &MinuitDriver::runMigrad;
    ^
src/minuitdriver.h:45:5: error: use of undeclared identifier 'minimizer0Map'; did you mean 'minimizer0_t'?
    minimizer0Map["MinuitMinimize"] = &MinuitDriver::runMinimize;
    ^
src/minuitdriver.h:46:5: error: use of undeclared identifier 'minimizer1Map'; did you mean 'minimizer1_t'?
    minimizer1Map["MinuitMinimize"] = &MinuitDriver::runMinimize;
    ^
src/minuitdriver.h:47:5: error: use of undeclared identifier 'minimizer2Map'; did you mean 'minimizer2_t'?
    minimizer2Map["MinuitMinimize"] = &MinuitDriver::runMinimize;
    ^
src/minuitdriver.h:48:5: error: use of undeclared identifier 'minimizer0Map'; did you mean 'minimizer0_t'?
    minimizer0Map["MinuitScan"]     = &MinuitDriver::runScan;
    ^
src/minuitdriver.h:49:5: error: use of undeclared identifier 'minimizer1Map'; did you mean 'minimizer1_t'?
    minimizer1Map["MinuitScan"]     = &MinuitDriver::runScan;
    ^
src/minuitdriver.h:50:5: error: use of undeclared identifier 'minimizer2Map'; did you mean 'minimizer2_t'?
    minimizer2Map["MinuitScan"]     = &MinuitDriver::runScan;
    ^
src/minuitdriver.h:51:5: error: use of undeclared identifier 'minimizer0Map'; did you mean 'minimizer0_t'?
    minimizer0Map["MinuitSimplex"]  = &MinuitDriver::runSimplex;
    ^
src/minuitdriver.h:52:5: error: use of undeclared identifier 'minimizer1Map'; did you mean 'minimizer1_t'?
    minimizer1Map["MinuitSimplex"]  = &MinuitDriver::runSimplex;
    ^
src/minuitdriver.h:53:5: error: use of undeclared identifier 'minimizer2Map'; did you mean 'minimizer2_t'?
    minimizer2Map["MinuitSimplex"]  = &MinuitDriver::runSimplex;
    ^
24 diagnostics generated.
